src/test/deca/context/invalid/created/SansObjet/ExpectedBoolean.deca
// Description:
//     Teste si une expression de type float est bien une expression de type boolean
// Resultats:
//    ExpectedBoolean.deca:7:7: Error: Expected expression type is 'boolean', got 'float'

{
    if(3.7) {
        println(23);
    }
}